<resources>
    <string name="app_name">NewProject</string>
    <string name="label_normal">Fitted for screen (common use)</string>
    <string name="label_small">Fitted for small layout parameters</string>
    <string name="label_medium">Tile size specified</string>
    <string name="label_thin">Tile width and height specified (thin)</string>
    <string name="label_wide">Tile width and height specified (wide)</string>
    <string name="today">Today is the day</string>

    <string-array name="custom_weekdays">
        <item>Su</item>
        <item>M</item>
        <item>Tu</item>
        <item>W</item>
        <item>Th</item>
        <item>F</item>
        <item>Sa</item>
    </string-array>

    <string-array name="custom_months">
        <item>JAN</item>
        <item>Feb</item>
        <item>MARCH</item>
        <item>April</item>
        <item>MAY</item>
        <item>June</item>
        <item>JULY</item>
        <item>Aug</item>
        <item>SEPT</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>DEC</item>
    </string-array>

    <string name="ecg_real_time_text_1">Place your fingertips on electrodes to start ECG recording.</string>
    <string name="ecg_real_time_text_2">Speak out loud any symptoms you are feeling.</string>
    <string name="ecg_real_time_turn_off_voice">Turn voice recording off</string>
    <string name="ecg_real_time_turn_on_voice">Turn voice recording on</string>
    <string name="explanation_grant_permission">Grant Permission</string>
    <string name="zero_time">00:00</string>
    <string name="no_heartrate">---</string>
    <string name="bpm">bpm</string>
    <string name="muscle_filter">Muscle Filter</string>
    <string name="pref_name_ac_mains_filter">AC Mains Filter</string>
    <string name="mains_filter">Mains Filter</string>
    <string name="baseline_filter">Baseline Filter</string>
    <string name="enhanced_filter">Enhanced Filter</string>
    <string name="desc_enhanced_filter">Enhanced Filter is Enabled</string>
    <string name="ecg_limited_reached">&lt;medium>Sign in to record more ECGs&lt;/medium>&lt;br />&lt;small>ECG limit reached&lt;/small></string>
    <string name="desc_notice">Notice</string>
    <string name="transcription_voice_prompt_1"> </string>
    <string name="transcription_voice_prompt_2"> </string>
    <string name="otc_title_record_ecg">Record ECG</string>
    <string name="record_ecg">Record ECG</string>
    <string name="fmt_hr_min_2_digit">%1$02d:%2$02d</string>
</resources>
