<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.test.newproject.view.EcgGridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageHands"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip"
        android:paddingTop="?android:actionBarSize">

        <ImageView
            android:id="@+id/instructions_step1_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/step_1"/>

        <TextView
            android:id="@+id/instructions_step1_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5.0dip"
            android:gravity="center_horizontal"
            android:text="@string/ecg_real_time_text_1"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="32.0dip"
            android:layout_marginTop="20.0dip"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/new_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="6.0dip"
                android:src="@drawable/new_badge"/>

            <ImageView
                android:id="@+id/instructions_step2_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/step_2"/>
        </LinearLayout>

        <TextView
            android:id="@+id/instructions_step2_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5.0dip"
            android:gravity="center_horizontal"
            android:text="@string/ecg_real_time_text_2"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:id="@+id/voice_settings_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.0dip"
            android:text="@string/ecg_real_time_turn_off_voice"
            android:textColor="#ff0072bc"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/voice_settings_link"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16.0dip">

            <Button
                android:id="@+id/btn_grant_permission"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/explanation_grant_permission"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:id="@+id/rec_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/pbar_rec"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6.0dip"
                android:indeterminate="false"
                android:progress="50"/>

            <TextView
                android:id="@+id/lbl_elapsedtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4.0dip"
                android:drawableLeft="@drawable/reddot"
                android:drawablePadding="5.0dip"
                android:drawableStart="@drawable/reddot"
                android:gravity="center"
                android:paddingRight="16.0dip"
                android:text="@string/zero_time"
                android:textSize="18.0sp"
                android:visibility="visible"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/layout_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="?android:actionBarSize"
            android:alpha="0.0">

            <ImageView
                android:id="@+id/img_signal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left|top"
                android:layout_marginLeft="8.0dip"
                android:layout_marginTop="16.0dip"
                android:contentDescription=""
                android:src="@drawable/signal0"/>

            <TextView
                android:id="@+id/lbl_heartrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right|top"
                android:layout_marginRight="45.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/no_heartrate"
                android:textColor="@android:color/black"
                android:textSize="50.0sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lbl_bpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right|top"
                android:layout_marginRight="6.0dip"
                android:layout_marginTop="48.0dip"
                android:text="@string/bpm"
                android:textColor="@android:color/black"
                android:textSize="18.0sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/img_heartbeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right|top"
                android:layout_marginRight="8.0dip"
                android:layout_marginTop="16.0dip"
                android:src="@drawable/heart"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_onscreencontrols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|center|right"
            android:layout_toLeftOf="@+id/img_e"
            android:visibility="gone"
            android:orientation="vertical">

            <Switch
                android:id="@+id/btn_musclefilter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="end|center"
                android:minHeight="48.0dip"
                android:text="@string/muscle_filter"
                android:textOff="Off"
                android:textOn="On"
                android:visibility="visible"/>

            <Switch
                android:id="@+id/btn_mainsfilter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="end|center"
                android:minHeight="48.0dip"
                android:text="@string/mains_filter"
                android:textOff="Off"
                android:textOn="On"
                android:visibility="visible"/>

            <Switch
                android:id="@+id/btn_baselinefilter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="end|center"
                android:minHeight="48.0dip"
                android:text="@string/baseline_filter"
                android:textOff="Off"
                android:textOn="On"
                android:visibility="visible"/>

            <Switch
                android:id="@+id/btn_enhancedfilter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="end|center"
                android:minHeight="48.0dip"
                android:text="@string/enhanced_filter"
                android:textOff="Off"
                android:textOn="On"
                android:visibility="visible"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:contentDescription="@string/desc_enhanced_filter"
            android:minHeight="48.0dip"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:src="@drawable/e"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/lbl_ecg_limit_reached"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?android:actionBarSize"
        android:background="#fffffff0"
        android:drawableLeft="@drawable/ic_menu_block"
        android:gravity="center"
        android:minHeight="65.0dip"
        android:padding="16.0dip"
        android:text="@string/ecg_limited_reached"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_ribbon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="100.0dip"
        android:contentDescription="@string/desc_notice"
        android:visibility="gone"
        android:src="@drawable/ribbon"/>

    <LinearLayout
        android:id="@+id/mic_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="15.0dip"
        android:alpha="0.0"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip">

            <ImageView
                android:id="@+id/mic_icon_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/mic_red_off"/>

            <ImageView
                android:id="@+id/mic_icon_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.0"
                android:src="@drawable/mic_red_on"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/transcription_voice_prompt_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/transcription_voice_prompt_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageHands"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/hands_bottom_margin"
        android:alpha="0.8"
        android:scaleType="fitCenter"
        android:src="@drawable/hand_illustration"/>

    <Button
        android:id="@+id/record_ecg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="?android:actionBarSize"
        android:background="?android:selectableItemBackground"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:text="@string/record_ecg"
        android:visibility="gone"/>

</RelativeLayout>